Correct search behaviour on mobile

--- a/frontend/portfolio/styles/globals.css
+++ b/frontend/portfolio/styles/globals.css
@@ -191,6 +191,9 @@ input.input::placeholder {
 	.desktop {
 		display: none;
 	}
+	.mobileHidden {
+		display: none;
+	}
 }
 
 /* Desktop only */
